@@ -1,3 +1,7 @@
+2008-09-04  Pat Thoyts <patthoyts@users.sourceforge.net>
+
+	* ijbridge.tcl: Do not let jabber users make the bot kick itself.
+
 2008-02-25  Pat Thoyts <patthoyts@users.sourceforge.net>
 
 	* ijbridge.tcl: Support recording user colors (from tkchat)
